# aoc-star

./: Cargo.toml  README.md
.github/workflows/: check_deps.yml  rust.yml
aoc-star/: Cargo.toml  README.md
aoc-star-derive/: Cargo.toml  README.md
aoc-star-derive/src/: args.rs  lib.rs
aoc-star-macros/: Cargo.toml
aoc-star-macros/src/: lib.rs
aoc-star-macros/tests/: compile.rs
aoc-star-macros/tests/ui/: generate_main_ok.rs  star_invalid_args.rs  star_ok.rs
aoc-star-runner/: Cargo.toml
aoc-star-runner/src/: lib.rs
aoc-star-runner/tests/ui/: star_invalid_args.rs  star_ok.rs
aoc-star/src/: cli.rs  config.rs  lib.rs  runner.rs
aoc-star/tests/: compile.rs  run_tests.rs
aoc-star/tests/ui/: star_invalid_args.rs  star_invalid_args.stderr  star_ok.rs
