[package]
name = "aoc-star"
version = "0.1.0"
edition = "2024"

[dependencies]
aoc-star-derive= { path = "../aoc-star-derive" }
inventory = "0.3"
clap = { version = "4", features = ["derive"] }
aoc-client = { version = "0.2.0", optional = true }
chrono = "0.4.42"
serde_yaml = "0.9.34"
serde = { version = "1.0.228", features = ["derive"] }
dirs = "6.0.0"

[features]
default = []
aoc-client = ["dep:aoc-client"]


[dev-dependencies]
trybuild = "1.0.114"
