[package]
name = "aoc-star"
version = "0.1.1"
edition = "2024"
description = "Library and CLI tool to manage your Advent of Code solutions"
authors = ["Yago Iglesias Vazquez  <yago@yagoiglesias.fr>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Yag000/aoc-star"
repository = "https://github.com/Yag000/aoc-star"
documentation = "https://docs.rs/aoc-star"
keywords = ["AdventOfCode", "AoC", "macro", "cli", "library"]

[dependencies]
aoc-star-derive = "0.1.1"
inventory = "0.3"
clap = { version = "4", features = ["derive"] }
aoc-client = { version = "0.2.0", optional = true }
chrono = "0.4.43"
serde_yaml = "0.9.34"
serde = { version = "1.0.228", features = ["derive"] }
dirs = "6.0.0"

[features]
default = []
test-helpers = []
aoc-client = ["dep:aoc-client"]


[dev-dependencies]
tempfile = "3.24.0"
trybuild = "1.0.114"
aoc-star = { path = ".", features = ["test-helpers"] }
